--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-tooltip": "^5.28.0",
